// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two no pic and two layout - small 1`] = `
<View>
  <Text>
    secondary-1
  </Text>
  <View />
  <Text>
    secondary-2
  </Text>
  <View />
  <Text>
    support-1
  </Text>
  <View />
  <Text>
    support-2
  </Text>
</View>
`;

exports[`2. secondary two no pic and two layout - medium 1`] = `
Array [
  <View>
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        secondary-2
      </Text>
    </View>
  </View>,
  <View />,
  <View>
    <View>
      <Text>
        support-1
      </Text>
    </View>
    <View />
    <View>
      <Text>
        support-2
      </Text>
    </View>
  </View>,
]
`;
